Git: log tree: structure filter works; correct pagination for rebase results